<resources>
    <string name="app_name">Book App Kotlin</string>
    <string name="new_user_signup">New User? <b>SignUp</b></string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>